# pencel

./: CMakeLists.txt  workspace.code-workspace
data/: faber-castell.gpl  faber-castell.txt
script/: loss.p
source/: CMakeLists.txt
source/pencel/: CMakeLists.txt  common.cpp  common.h  optimizer.cpp  optimizer.h  pencel.cpp  resampler.cpp  resampler.h  showgrid.cpp
